<resources>
    <string name="app_name">Regensbad</string>
    <string name="app_label">Regensbad</string>
    <string name="search_hint">Badname eingeben</string>
    <string name="regensburg">Regensburg</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_icon_content_description">app icon</string>
    <string name="user_online_description">User Online</string>
    <string name="no_internet_connection">Keine Internetverbindung</string>

    <!--Action Menü-->
    <string name="action_myAccount">Mein Account</string>
    <string name="action_logout">Abmelden</string>

    <!--Login Activity-->
    <string name="login_with_user_account">Mit Nutzer-Account anmelden?</string>
    <string name="button_login">Anmelden</string>
    <string name="button_skip">Überspringen</string>
    <string name="pacifico_font_path">Fonts/Pacifico.ttf</string>
    <string name="skip_login">Wenn Sie ohne Nutzer Account fortfahren, müssen Sie mit eingeschränkter Funktionalität rechnen.
    Sie werden zum Beispiel keine Kommentare oder Bewertungen zu Bädern abgeben können. </string>
    <string name="do_not_show_anymore">Diese Meldung nicht mehr anzeigen</string>
    <string name="cancel">Abbrechen</string>
    <string name="continue_anyway">Weiter</string>

    <!--CreateAccountOrSignInActivity-->
    <string name="title_activity_create_account_or_sign_in">Anmelden</string>
    <string name="sign_in">Anmelden </string>
    <string name="create_an_account">Sie haben noch keinen Account?</string>
    <string name="you_have_an_account">Sie haben bereits einen Account:</string>
    <string name="username">Nutzername</string>
    <string name="password">Passwort</string>
    <string name="submit_account">Registrieren</string>
    <string name="okay">OK</string>
    <string name="create_new_account">Neuen Account anlegen</string>
    <string name="forgot_password">Passwort vergessen?</string>
    <string name="sign_in_no_internet_connection">Die Anmeldung war leider nicht erfolgreich. Offenbar besteht keine Verbindung zum Internet. </string>
    <string name="check_in_failed">Die Anmeldung war leider nicht erfolgreich. Bitte versuchen Sie es erneut.</string>
    <string name="sign_in_failed_title">Anmeldung nicht erfolgreich</string>
    <string name="sign_in_succesful_title">Anmeldung erfolgreich</string>

    <!--CreateAccountActivity-->
    <string name="title_activity_create_account">Account Anlegen</string>
    <string name="create_new_account_with_colon">Neuen Account anlegen: </string>
    <string name="create_account_activity_name">Registrieren</string>
    <string name="mail_address">E-Mail Adresse</string>
    <string name="submission_failed">Die Registrierung war leider nicht erfolgreich. Versuchen Sie es mit einem anderen Nutzernamen.</string>
    <string name="submission_succeeded">Die Registrierung war erfolgreich.</string>
    <string name="submission_successful_description">Registrierung erflogreich</string>
    <string name="create_account_no_internet_connection">Die Registrierung war leider nicht erfolgreich. Offenbar besteht keine Verbindung zum Internet.</string>
    <string name="submission_failed_description">Registrierung nicht erfolgreich</string>
    <string name="submisson_succesful_title">Registrierung erfolgreich</string>
    <string name="submisson_failed_title">Registrierung nicht erfolgreich</string>

    <!--ResetPasswordActivity-->
    <string name="title_activity_reset_password">Passwort Zurücksetzen</string>
    <string name="enter_mail_to_reset_password">Bitte geben Sie Ihre E-Mail Adresse ein: </string>
    <string name="reset_password">Passwort Zurücksetzen</string>
    <string name="reset_password_succeeded">Das Zurücksetzen war erfolgreich. Eine E-Mail wurde an die angegebene Mail-Adresse gesandt.</string>
    <string name="reset_password_failed">Für die angegebene Mail-Adresse existiert leider kein Account.</string>
    <string name="reset_password_no_internet_connection">Die Anmeldung war leider nicht erfolgreich. Offenbar besteht keine Verbindung zum Internet</string>
    <string name="reset_password_successful_description">Passwort Zurücksetzen erflogreich</string>
    <string name="reset_password_failed_description">Passwort Zurücksetzen nicht erfolgreich</string>
    <string name="reset_password_failed_title">Zurücksetzen nicht erfolgreich</string>
    <string name="reset_password_successful_title">Zurücksetzen erfolgreich</string>

    <!--HomeScreenActivity-->
    <string name="title_activity_home_screen">Regensbad</string>
    <string name="all_civic_pools">Alle Bäder</string>
    <string name="closest_civic_pool">Nähestes Bad</string>
    <string name="weather_regensburg">Wetter für Regensburg</string>
    <string name="my_account">Mein Account</string>
    <string name="search_title_description">Suche</string>
    <string name="weather_image_view_description">Wetter Icon</string>
    <string name="last_updated">letztes Update: </string>

    <!-- MyAccountActivity-->
    <string name="my_account_in_my_account_activity">Mein Account </string>
    <string name="user_name">Nutzername: </string>
    <string name="mail_address_in_my_account_activity">E-Mail Adresse: </string>
    <string name="change_password">Passwort ändern</string>


    <!--Main Activity-->
    <string name="button_closest_lake">Nähestes Bad finden</string>
    <string name="button_all_lakes">Alle Badeorte anzeigen</string>

    <!--No Connection Activity-->
    <string name="no_connection">Inhalte konnten nicht geldaden werden, da keine Verbindung zum Server besteht. Stellen Sie bitte eine Internetverbindung her.</string>

    <!--Single List Item-->
    <string name="string_km"> km</string>
    <string name="string_open">geöffnet</string>
    <string name="string_closed">geschlossen</string>
    <string name="string_km_airline"> km Luftlinie</string>

    <!--AllCivicPoolsActivity-->
    <string name="sort_AtoZ">nach Alphabet sortieren</string>
    <string name="sort_rating">nach Bewertung sortieren</string>
    <string name="sort_distance">nach Entfernung sortieren</string>
    <string name="sort_type">nach Typ sortieren</string>

    <!--Detail View-->
    <string name="string_openTime">Öffnungszeiten:</string>
    <string name="string_price">Eintritt</string>
    <string name="string_euro">€</string>
    <string name="string_showOnMap">Auf Karte zeigen</string>
    <string name="string_nav">Navigation</string>
    <string name="string_infos">Informationen</string>
    <string name="string_ratings">Bewertungen</string>
    <string name="string_website">Zur Website</string>
    <string name="comments">Kommentare</string>
    <string name="latest_comment">Neuester Kommentar: </string>
    <string name="all_comments">Alle Kommentare</string>
    <string name="make_a_comment">Kommentar verfassen</string>
    <string name="submit_comment">Kommentar abgeben</string>
    <string name="cancel_submit_comment">Abbrechen</string>

    <!--Dummies-->
    <string name="string_lakeName">Name des Sees</string>
    <string name="string_bathType">Typ</string>
    <string name="string_distance">5,2</string>
    <string name="degrees">00°</string>
    <string name="weather_description">Keine Internetverbindung</string>
    <string name="max_temp">H 00°</string>
    <string name="min_temp">T 00°</string>
    <string name="username_list">Nutzername</string>
    <string name="dummy_commnet">Leider hat noch kein Nutzer einen Kommentar zu diesem See bzw. diesem Bad abgegeben. Seien Sie der erste! Drücken Sie einfach auf "Kommentar verfassen". </string>
    <string name="dummy_date">04.11.2015  14:30</string>
    <string name="dummy_comment">Kommentar</string>
    <string name="dummy_upvotes">(0)</string>


    <string name="title_activity_maps">Map</string>

    <string name="title_activity_weather_detail">WeatherDetailActivity</string>
    <string name="title_activity_all_civic_pools">Alle Badeorte</string>
    <string name="title_activity_closest_civic_pool">ClosestCivicPoolActivity</string>
    <string name="title_activity_all_civic_pools_on_map">AllCivicPoolsOnMapActivity</string>
    <string name="title_activity_civic_pool_detail">Details</string>
    <string name="title_activity_search_civic_pools">Suchergebnisse</string>
    <string name="title_activity_my_account">Mein Account</string>
    <string name="title_activity_all_comments">AllCommentsActivity</string>
    <string name="title_activity_no_data_available">NoDataAvailableActivity</string>




</resources>
