<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.tom.regensbad.Activities.AllCivicPoolsActivity">

    <item android:id="@+id/sort_AtoZ" android:title="@string/sort_AtoZ"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/sort_rating" android:title="@string/sort_rating"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/sort_distance" android:title="@string/sort_distance"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/sort_type" android:title="@string/sort_type"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/button_all_civic_pools_on_map" android:title="@string/all_civic_pools" android:orderInCategory="100" app:showAsAction="ifRoom" android:icon="@drawable/ic_map_white_24dp" />
</menu>
