<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    android:orientation="vertical"
    android:weightSum="3"
    android:background="@color/blue_primary_color">
    
    <ImageView
        android:id="@+id/image_view_app_icon"
        android:layout_width="match_parent"
        android:layout_weight="1.3"
        android:layout_height="0dp"
        android:contentDescription="@string/app_icon_content_description"/>

    <TextView
        android:id="@+id/text_view_app_name"
        android:layout_width="match_parent"
        android:layout_weight="0.6"
        android:layout_height="0dp"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:gravity="center"/>


    <TextView
        android:id="@+id/text_view_login"
        android:layout_width="match_parent"
        android:layout_weight="0.5"
        android:layout_height="0dp"
        android:layout_marginBottom="-10dp"
        android:text="@string/login_with_user_account"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:gravity="center_vertical"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="300dp"
        android:layout_weight="0.3"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:text="@string/button_login"
        android:textSize="15sp"
        android:background="@color/blue_dark_primary_color"
        android:textColor="@color/white"
        android:drawableRight="@drawable/placeholder_icon"/>

    <Button
        android:id="@+id/button_skip"
        android:layout_width="300dp"
        android:layout_weight="0.3"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/button_skip"
        android:textSize="15sp"
        android:background="@color/blue_dark_primary_color"
        android:textColor="@color/white"
        android:drawableRight="@drawable/placeholder_icon"

        />



</LinearLayout>
