<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/blue_primary_color"
    android:weightSum="3">

    <RelativeLayout
        android:id="@+id/weather_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3">
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/button_closest_lake"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.3"
        android:text="@string/button_closest_lake"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:background="@color/blue_dark_primary_color"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/button_goToList"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.3"
        android:text="@string/button_all_lakes"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:background="@color/blue_dark_primary_color"
        android:layout_gravity="center"/>

</LinearLayout>