<?xml version="1.0" encoding="utf-8"?>
<!--Created with the help of: http://developer.android.com/guide/topics/ui/dialogs.html-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <RatingBar
        android:id="@+id/ratingbar_dialog_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:stepSize="1"
        />

    <TextView
        android:id="@+id/text_view_dialog_comment_civic_pool_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_lakeName"
        android:layout_gravity="center"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/text_view_dialog_comment_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue_primary_color"
        android:textSize="20dp"
        android:text="@string/user_name"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        />

    <EditText
        android:id="@+id/text_view_dialog_comment"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:hint="@string/dummy_comment"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"/>




</LinearLayout>