<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:layout_margin="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@layout/round_corners_for_single_lake_list_item"
        android:padding="15dp">


    <TextView
        android:id="@+id/text_view_username_comment_single"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="@color/blue_primary_color"
        android:textSize="16sp"
        android:paddingLeft="10dp"
        android:layout_marginBottom="5dp"/>

    <RatingBar
        android:id="@+id/ratingbar_comment_rating_single"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/text_view_comment_single"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_commnet"
        android:textColor="@color/black"
        android:paddingLeft="10dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/text_view_comment_date_single"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_date"
        android:paddingLeft="10dp"
        android:layout_marginBottom="5dp"/>

    </LinearLayout>

</LinearLayout>