
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.tom.regensbad.Activities.CreateAccountOrSignInActivity"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@drawable/background_for_activities">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.7"
        android:orientation="horizontal"
        android:weightSum="4"
        >

        <TextView
            android:id="@+id/text_view_my_account"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:text="@string/my_account_in_my_account_activity"
            android:textSize="22sp"
            android:gravity="center"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:orientation="horizontal"
        android:weightSum="4"
        >

        <TextView
            android:id="@+id/text_view_user_name"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:text="@string/user_name"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:orientation="horizontal"
        android:weightSum="4"
        >

        <TextView
            android:id="@+id/text_view_mail_address"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:text="@string/mail_address_in_my_account_activity"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:textColor="@color/white"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:orientation="horizontal"
        android:weightSum="4"
        android:gravity="center"
        android:layout_marginTop="10dp"
        >

        <Button
            android:id="@+id/button_change_password"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:text="@string/change_password"
            android:textSize="15sp"
            android:background="@drawable/button_selector"
            android:textColor="@drawable/button_text_color"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:orientation="horizontal"
        android:weightSum="4"
        android:gravity="center"
        android:layout_marginTop="10dp"
        >

        <Button
            android:id="@+id/button_logout"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:text="@string/action_logout"
            android:textSize="15sp"
            android:background="@drawable/button_selector"
            android:textColor="@drawable/button_text_color"
            />

    </LinearLayout>




</LinearLayout>
