
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.tom.regensbad.Activities.CreateAccountOrSignInActivity"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@drawable/background_for_activities">

    <TextView
        android:id="@+id/text_view_app_name_in_reset_password_activity"
        android:layout_width="match_parent"
        android:layout_weight="2.5"
        android:layout_height="0dp"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="-5dp"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:gravity="center"/>

    <View
        android:id="@+id/view_to_keep_margin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4"
        >

        <TextView
            android:id="@+id/text_view_enter_mail_to_reset_password"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:text="@string/enter_mail_to_reset_password"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/edit_text_mail_address"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:hint="@string/mail_address"
            android:textColorHint="@color/blue_primary_color"
            android:textSize="15sp"
            android:background="@drawable/edit_text_shape"
            android:paddingLeft="15dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4"
        android:gravity="center">

        <Button
            android:id="@+id/button_reset_password"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:text="@string/reset_password"
            android:textSize="15sp"
            android:background="@drawable/button_selector"
            android:textColor="@drawable/button_text_color"
            />

    </LinearLayout>

</LinearLayout>

